[build-system]
requires = [
"setuptools>=42",
"wheel",
"Cython>=3.1.2",
"numpy>=1.26.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "nencarta"
version = "0.2.1"
description = "A library for estimating riverine bathymetry and performing flood inundation mapping."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Joseph Gutenson", email = "joseph@follumhydro.com" },
]
license = { text = "MIT" }
dependencies = [
"beautifulsoup4",
"cython",
"dask",
"dataretrieval",
"fiona",
"gdal",
"geoglows",
"geojson",
"geopandas",
"netCDF4",
"numba",
"numpy",
"pandas",
"pillow==9.0.1",
"progress",
"pygeos",
"pyproj",
"PyQt5>=5.15",
"rasterio",
"requests",
"s3fs",
"scipy",
"shapely",
"tqdm",
"xarray",
"whitebox",
"zarr"
]

[project.scripts]
flood-mapping = "nencarta.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nencarta*"]